# ROS2

./: .gitignore  BRIEF_PENTRU_CLAUDE_CHAT.md  CAMPANIA_MISIUNE.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATIE.md  GHID_INTERFERENTA_RF.md  GHID_INVATARE.md  GHID_PORNIRE.md  PARAMETRI_SI_TRANSFER_REAL.md  PROGRESS_READMES.md  PROIECT_ECOSISTEM_EDUCATIONAL.md  PROIECT_FIELD_KIT.md  PROIECT_LINK_ADAPTIVE.md  README.md  ROADMAP_DEZVOLTARE.md  TEHNOLOGII.md  check_repo.sh  slide10_si_discussion.md  smoke_all.sh
c1_benchmark/: .gitignore  (+43 more)
curs_ml/: .gitignore  BIBLIOGRAFIE.md  CHARTA.md  GLOSAR.md  PRINCIPII_TRANSVERSALE.md  PROGRESS_CURS_ML.md  PROIECTE_SINTEZA.md  README.md  gen_instalator.py  package.xml  requirements.txt  setup.cfg  setup.py  verifica_ml.sh
curs_ml/curs_ml/: __init__.py  date_sar.py  utils.py
curs_ml/curs_ml/m00_algebra/: README.md  algebra_liniara_core.py  algebra_liniara_sklearn.py  demo_sil.py  exercitii.md  exercitii.py  solutii.py  teorie.md
curs_ml/curs_ml/m01_probabilitate/: README.md  demo_sil.py  exercitii.md  exercitii.py  probabilitate_core.py  probabilitate_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m02_optimizare/: README.md  demo_sil.py  exercitii.md  exercitii.py  optimizare_core.py  optimizare_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m03_invatare_supervizata/: README.md  demo_sil.py  exercitii.md  exercitii.py  invatare_supervizata_core.py  invatare_supervizata_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m04_date_features/: README.md  date_features_core.py  date_features_sklearn.py  demo_sil.py  exercitii.md  exercitii.py  solutii.py  teorie.md
curs_ml/curs_ml/m05_regresie_liniara/: README.md  demo_sil.py  exercitii.md  exercitii.py  regresie_liniara_core.py  regresie_liniara_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m06_regularizare/: README.md  demo_sil.py  exercitii.md  exercitii.py  regularizare_core.py  regularizare_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m07_evaluare_validare/: README.md  demo_sil.py  evaluare_validare_core.py  evaluare_validare_sklearn.py  exercitii.md  exercitii.py  solutii.py  teorie.md
curs_ml/curs_ml/m08_regresie_logistica/: README.md  demo_sil.py  exercitii.md  exercitii.py  regresie_logistica_core.py  regresie_logistica_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m09_metrici_dezechilibru/: README.md  demo_sil.py  exercitii.md  exercitii.py  metrici_calibrare_core.py  metrici_calibrare_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m10_naive_bayes/: README.md  demo_sil.py  exercitii.md  exercitii.py  naive_bayes_core.py  naive_bayes_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m11_knn_svm/: README.md  demo_sil.py  exercitii.md  exercitii.py  knn_svm_core.py  knn_svm_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m12_arbori/: README.md  arbori_decizie_core.py  arbori_decizie_sklearn.py  demo_sil.py  exercitii.md  exercitii.py  solutii.py  teorie.md
curs_ml/curs_ml/m13_ensembluri/: README.md  demo_sil.py  ensembluri_core.py  ensembluri_sklearn.py  exercitii.md  exercitii.py  solutii.py  teorie.md
curs_ml/curs_ml/m14_interpretabilitate/: README.md  demo_sil.py  exercitii.md  exercitii.py  interpretabilitate_core.py  interpretabilitate_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m15_clustering/: README.md  clustering_core.py  clustering_sklearn.py  demo_sil.py  exercitii.md  exercitii.py  solutii.py  teorie.md
curs_ml/curs_ml/m16_reducere_dimensionalitate/: README.md  demo_sil.py  exercitii.md  exercitii.py  pca_core.py  pca_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m17_incertitudine/: README.md  demo_sil.py  exercitii.md  exercitii.py  incertitudine_core.py  incertitudine_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m18_selectie_model/: README.md  demo_sil.py  exercitii.md  exercitii.py  selectie_model_core.py  selectie_model_sklearn.py  solutii.py  teorie.md
curs_ml/curs_ml/m19_serii_temporale/: README.md  demo_sil.py  exercitii.md  exercitii.py  serii_temporale_core.py  serii_temporale_sklearn.py  solutii.py  teorie.md
curs_ml/tests/: run_all_selftests.py
curs_ros2_interfaces/: CMakeLists.txt  README.md  package.xml
curs_ros2_interfaces/action/: Incalzire.action
curs_ros2_interfaces/msg/: Temperatura.msg
curs_ros2_interfaces/srv/: AjustareTemperatura.srv
link_adaptive/: PROIECT_LINK_ADAPTIVE.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
link_adaptive/launch/: link_adaptive.launch.py  link_adaptive_loop.launch.py
link_adaptive/link_adaptive/: link_adaptive_core.py  link_adaptive_node.py  policy_adapter_node.py  policy_applier.py  sil_link_adaptive.py  sil_policy_loop.py
mesh_plugin/: README.md  mesh_core.py  mesh_demo.py  mesh_node.py  netem_core.py  package.xml  radio_link.py  requirements.txt  sar_core.py  setup.cfg  setup.py  sil_mesh.py  sil_mesh_mission.py  swarm_core.py  test_mesh_core.py  verifica_tot.sh
mesh_plugin/launch/: mesh_plugins.launch.py
mesh_plugin/mesh_plugin/: mesh_core.py  mesh_node.py  sil_mesh.py  sil_mesh_mission.py
mesh_plugin/scenarios/: baseline.yaml  drone_isolation.yaml  loss_30.yaml  mesh_relay.yaml  partition_2v2.yaml
rehab_exo_description/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
rehab_exo_description/config/: controllers.yaml  gz_patient_bridge.yaml  patient_demo.yaml  safety_limits.yaml
rehab_exo_description/docs/: INSTALL_EXTENSII.md
rehab_exo_description/launch/: demo.launch.py  demo_all.launch.py  display.launch.py  exercitii_combinat.launch.py  exercitii_genunchi.launch.py  exercitii_glezna.launch.py  exercitii_sold.launch.py  gazebo.launch.py  operator.launch.py
rehab_exo_description/rviz/: rehab.rviz
rehab_exo_description/scripts/: exercise_controller.py  exercise_core.py  netem_profiles.sh  operator_heartbeat.py  operator_panel.py  patch_urdf_extensions.py  patient_model.py  plot_recording.py  safety_supervisor.py  sensor_recorder.py  session_report.py  telemetry_display.py
rehab_exo_description/urdf/: rehab_exo.urdf  rehab_exo.xacro
rehab_exo_description/worlds/: rehab_world.sdf
(+2769 files in other folders)
