<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>curs_ros2_interfaces</name>
  <version>0.1.0</version>
  <description>Interfete custom (msg/srv/action) pentru cursul ROS 2 (modulul M7). Pachet ament_cmake, fiindca rosidl nu poate genera tipuri intr-un pachet pur Python.</description>
  <maintainer email="gheorghitaalexandruu@gmail.com">Alexandru</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generatorul de cod rosidl: din .msg/.srv/.action -> cod Python si C++ -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Pachetul devine membru al grupului de interfete (obligatoriu) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
