<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mesh_plugin</name>
  <version>0.1.0</version>
  <description>
    Retea mesh multi-hop intre drone pentru ROS 2 (Search-and-Rescue):
    descoperire de vecini prin beacon, metrica de legatura ETX, rutare Dijkstra
    spre statia de la sol si releu dirijat hop-cu-hop. Schimba topologia roiului
    din stea in mesh, astfel incat o drona fara legatura directa la GCS sa ajunga
    prin relee. Stratul de aplicatie sta deasupra modelului radio log-distance.
  </description>
  <maintainer email="alexandru@example.ro">Alexandru</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
