<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rehab_exo_description</name>
  <version>0.1.0</version>
  <description>
    Descrierea URDF/xacro a robotului medical de recuperare locomotorie cu 6 GDL
    (sold/genunchi/glezna x2, 0-180 grade). Include configurarea ros2_control si
    fisiere de lansare pentru RViz si Gazebo (gz). Model de dezvoltare/simulare,
    NU controller medical certificat (vezi documentul si nota de siguranta).
  </description>
  <maintainer email="alexandru@example.com">Alexandru</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>ros_gz_bridge</exec_depend>
</package>
